@@ -45,6 +45,17 @@ this. Now <code>ordiplot3d</code> sets equal axis ranges, and the
 documents urge users to verify that the aspect ratio is
 reasonably equal and the graph looks like a cube.
 </p>
+</li>
+<li> <p><code>predict</code> for <code>cca</code> results with <code>type =
+        "response"</code> or <code>type = "working"</code> failed with
+<code>newdata</code> if it did not have the same number of rows as
+the original model data.  Now the <code>newdata</code> is ignored if
+it has a wrong number of rows.  The number of rows must match
+because the results in these models must be weighted by
+original row totals.  The problem did not concern <code>rda</code>
+or <code>capscale</code> results which do not need row weights.
+Reported by Glenn De'ath.
+</p>
 </li></ul>
 
 
